# ProiectC-

./: .gitignore  Absente.h  CMakeLists.txt  Catalog.cpp  Catalog.h  Elev.cpp  Elev.h  IO.cpp  IO.h  Materie.cpp  Materie.h  Nota.cpp  README.md  app1.cpp  app2.cpp  elevi.txt  main.cpp
data/elevi/: 1234567890123.txt
elevi/: 123.txt  21213.txt  5050.txt
include/: Absente.h  Elev.h  IO.h  Materie.h  Nota.h
src/: Absente.cpp  Elev.cpp  IO.cpp  Materie.cpp  Nota.cpp
